[package]
name = "stammer"
version = "0.1.0"
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
mumble-protocol = { path = "../mumble-protocol" }
fern = "0.6.0"
futures = "0.3.5"
log = "0.4.11"
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = "0.3.1"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[lib]
name = "stammer"
path = "src/lib.rs"

[[bin]]
name = "stammer"
path = "src/main.rs"
