[package]
name = "stutter"
version = "0.1.0"
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
bytes = "0.5.6"
futures = "0.3.5"
fern = "0.6.0"
log = "0.4.11"
cpal = "0.12.1"
opus = "0.2.1"
mumble-protocol = { path = "../mumble-protocol" }
ringbuf = "0.2.2"
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = "0.3.1"
tui = "0.10.0"
termion = "1.5"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[lib]
name = "stutter"
path = "src/lib.rs"

[[bin]]
name = "stutter"
path = "src/main.rs"
