[package]
name = "stuttercli"
version = "0.1.0"
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
async-readline = "0.1.0"
mio = "0.7.0"
tokio-core = "0.1.17"
nix = "0.18.0"
mumble-protocol = { path = "../mumble-protocol" }
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = "0.3.1"
termios = "0.3.2"
raw = "0.0.6"
