[package]
name = "stutterd"
version = "0.1.0"
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
mumble-protocol = { path = "../mumble-protocol" }
futures = "0.3.5"
rand = "0.7.3"
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = "0.3.1"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
